# fastgql

./: .gitignore  404.html  README.md  index.html  mypy.ini  pyproject.toml  sitemap.xml
.github/: README.md
.github/workflows/: build_docs.yml
docs/: mkdocs.yml  pyproject.toml
docs/docs/: fastgql.md  index.md  tutorial.md
docs/docs/tutorial/: index.md  more_advanced.md  query_builder.md
docs/docs_src/tutorial/: movies_edgedb.py  movies_qb.py
docs/old/: fastgql_old.md  tutorial_index_old.md
fastgql/: __init__.py  context.py  depends.py  gql_models.py  info.py  scalars.py  schema_builder.py  utils.py
fastgql/execute/: executor.py  resolver.py  utils.py
fastgql/gql_ast/: models.py  translator.py
fastgql/query_builders/edgedb/: config.py  logic.py  models.py  query_builder.py
fastgql/query_builders/sql/: config.py  logic.py  query_builder.py
fastgql/static/: graphiql.html
search/: search_index.json
stylesheets/: extra.css
tests/: sqlparse_testing.py  start.py
tests/for_docs/: build_data.py  main.py  movie_super_simple.py  movies.py  movies_edgedb.py  movies_qb.py  movies_simple.py
tests/server/: main.py  start.py
tests/server/services/users/: gql.py
tutorial/: index.html
tutorial/more_advanced/: index.html
tutorial/query_builder/: index.html
