[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Jeremy Berman <jerber@sas.upenn.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = { extras = ["all", "imaging"], version = "^9.4.7" }
pymdown-extensions = { version = "^10.3.1" }
markdown = "^3.5.1"
pygments = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
